--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint",
     "format": "prettier --write ./src",
     "test": "jest --config jest.config.ts"
@@ -19,6 +20,7 @@
     "@types/jest": "^30.0.0",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
+    "gh-pages": "^6.3.0",
     "jest": "^30.0.4",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
